Fixed variables and white space. Changed color of mobile header and summary fonts.

--- a/public_html/scss/style.css
+++ b/public_html/scss/style.css
@@ -15,7 +15,7 @@ h1 {
   padding-bottom: 0;
   padding-top: 1em;
   text-align: center;
-  color: #fbe6a6; }
+  color: #fcfaf7; }
 
 h2 {
   font-family: "Verdana";
@@ -77,7 +77,6 @@ section p {
     writing-mode: vertical-rl;
     text-orientation: upright;
     word-spacing: -25px;
-    color: #fcfaf7;
     width: 4%;
     height: 150%;
     font-family: "Courier";
@@ -112,9 +111,10 @@ section p {
     color: #fcfaf7; } }
 header {
   background-color: #577699; }
+  header h2 {
+    color: #fbe6a6; }
   @media only screen and (min-width: 47em) {
     header h2 {
-      color: #fbe6a6;
       font-size: 2em;
       padding-top: 1em; } }
 
@@ -122,9 +122,8 @@ header {
   background-color: #577699; }
   .summary:nth-child(2) a {
     color: #fbe6a6; }
-  @media only screen and (min-width: 47em) {
-    .summary p {
-      color: #fcfaf7; } }
+  .summary p {
+    color: #fcfaf7; }
 
 .preamble {
   border-bottom: 1px solid #383c4a;
